created chat feature and reviews and rating